# pawagent

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cli/: __init__.py  main.py
docs/: architecture.md  concepts.md  spec.md
examples/identity_demo/: main.py
examples/mood_detection_demo/: main.py
examples/personality_demo/: main.py
pawagent/: __init__.py  breed_identifier.py
pawagent/agents/: __init__.py  behavior_agent.py  expression_agent.py  mood_agent.py  motivation_agent.py  personality_agent.py  translate_agent.py
pawagent/audio/: __init__.py  analyzer.py  preprocess.py
pawagent/core/: __init__.py  agent.py  content_hash.py  images.py  orchestrator.py  unified_analysis.py  workflow.py
pawagent/expression/: __init__.py  store.py
pawagent/identity/: __init__.py  cropper.py  embedder.py  service.py  store.py
pawagent/memory/: __init__.py  context_builder.py  history.py  store.py  summarizer.py
tests/: test_behavior_agent.py  test_breed_identifier.py  test_claude_cli_provider.py  test_claude_provider.py  test_cli.py  test_cli_provider_selection.py  test_codex_provider.py  test_gemini_cli_provider.py  test_gemini_provider.py  test_identity_service.py  test_identity_store.py  test_images.py  test_json_memory_store.py  test_mood_agent.py  test_openai_provider.py  test_personality_agent.py  test_personality_profile_store.py  test_prompts.py  test_provider_parsing.py  test_translate_agent.py  test_unified_analysis_cache.py  test_vision_analyzer.py
(+34 files in other folders)
